[gd_scene load_steps=45 format=3 uid="uid://md5w04hdljf1"]

[ext_resource type="Script" path="res://PauseMenu/pause_menu.gd" id="1_jo7hg"]
[ext_resource type="Texture2D" uid="uid://t3mgixlesxv8" path="res://PauseMenu/bar_round_gloss_large.png" id="2_4ep3y"]
[ext_resource type="Texture2D" uid="uid://c2ce14225yaco" path="res://PauseMenu/panel_glass_screws_large.png" id="3_v6ro6"]
[ext_resource type="Texture2D" uid="uid://djx1u1qr6ilya" path="res://assets/collectabes/water_bubble.png" id="4_40kaq"]
[ext_resource type="Texture2D" uid="uid://dn0ds7y7r0d7k" path="res://assets/collectabes/oil_bubble.png" id="5_uuvda"]
[ext_resource type="Texture2D" uid="uid://cvn0blwa4chuc" path="res://assets/collectabes/iron_ore.png" id="6_0nybk"]
[ext_resource type="Texture2D" uid="uid://da8y88xs5if1o" path="res://assets/collectabes/uranium_ore.png" id="7_6uuvc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rwlo2"]
atlas = ExtResource("4_40kaq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6u7i"]
atlas = ExtResource("4_40kaq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qgjf"]
atlas = ExtResource("4_40kaq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfdlc"]
atlas = ExtResource("4_40kaq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi6wf"]
atlas = ExtResource("4_40kaq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr0p6"]
atlas = ExtResource("4_40kaq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5fsq"]
atlas = ExtResource("4_40kaq")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8h31"]
atlas = ExtResource("4_40kaq")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ebpq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwlo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6u7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qgjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfdlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi6wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr0p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5fsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8h31")
}],
"loop": true,
"name": &"water",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y0cbr"]
atlas = ExtResource("5_uuvda")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eymer"]
atlas = ExtResource("5_uuvda")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxw28"]
atlas = ExtResource("5_uuvda")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xksha"]
atlas = ExtResource("5_uuvda")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqp0c"]
atlas = ExtResource("5_uuvda")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq2t7"]
atlas = ExtResource("5_uuvda")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_brh8c"]
atlas = ExtResource("5_uuvda")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4ymj"]
atlas = ExtResource("5_uuvda")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6xc0w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0cbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eymer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxw28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xksha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqp0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq2t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brh8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4ymj")
}],
"loop": true,
"name": &"Oil",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vbwvd"]
atlas = ExtResource("6_0nybk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gknka"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbwvd")
}],
"loop": true,
"name": &"Iron",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cji70"]
atlas = ExtResource("7_6uuvc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x20lh"]
atlas = ExtResource("7_6uuvc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3chr3"]
atlas = ExtResource("7_6uuvc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6orr1"]
atlas = ExtResource("7_6uuvc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gggqk"]
atlas = ExtResource("7_6uuvc")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ehd3"]
atlas = ExtResource("7_6uuvc")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_usp24"]
atlas = ExtResource("7_6uuvc")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhgg1"]
atlas = ExtResource("7_6uuvc")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcquh"]
atlas = ExtResource("7_6uuvc")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbh2c"]
atlas = ExtResource("7_6uuvc")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw8oc"]
atlas = ExtResource("7_6uuvc")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v666l"]
atlas = ExtResource("7_6uuvc")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk3fd"]
atlas = ExtResource("7_6uuvc")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey18j"]
atlas = ExtResource("7_6uuvc")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ula8w"]
atlas = ExtResource("7_6uuvc")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r47fa"]
atlas = ExtResource("7_6uuvc")
region = Rect2(96, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7tjll"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cji70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x20lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3chr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6orr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gggqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ehd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usp24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhgg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcquh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbh2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw8oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v666l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk3fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey18j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ula8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r47fa")
}],
"loop": true,
"name": &"Uranium",
"speed": 15.0
}]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jo7hg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.258824, 0.258824, 0.764706)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.5
offset_right = 217.5
offset_bottom = 69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Paused"
horizontal_alignment = 1

[node name="behindPaused" type="Sprite2D" parent="Label"]
show_behind_parent = true
position = Vector2(217.5, 37.5)
scale = Vector2(2.66667, 2.45833)
texture = ExtResource("2_4ep3y")

[node name="MainWindow" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_right = 95.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="Sprite2D" parent="MainWindow"]
position = Vector2(95, 4)
texture = ExtResource("3_v6ro6")
metadata/_edit_lock_ = true

[node name="WaterCollectable" type="AnimatedSprite2D" parent="MainWindow"]
position = Vector2(543, -152)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_8ebpq")
animation = &"water"
frame_progress = 0.241928

[node name="WaterPlayerAmount" type="Label" parent="MainWindow"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 241.0
offset_top = -181.0
offset_right = 312.0
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "99999"
horizontal_alignment = 2

[node name="WaterShipAmount" type="Label" parent="MainWindow"]
layout_mode = 0
offset_left = 426.0
offset_top = -168.0
offset_right = 497.0
offset_bottom = -133.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "99999"
horizontal_alignment = 2

[node name="OilCollectable" type="AnimatedSprite2D" parent="MainWindow"]
position = Vector2(543, -14)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_6xc0w")
animation = &"Oil"
frame_progress = 0.440519

[node name="OilPlayerAmount" type="Label" parent="MainWindow"]
layout_mode = 0
offset_left = 334.0
offset_top = -30.0
offset_right = 405.0
offset_bottom = 5.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "99999"
horizontal_alignment = 2

[node name="OilShipAmount" type="Label" parent="MainWindow"]
layout_mode = 0
offset_left = 426.0
offset_top = -30.0
offset_right = 497.0
offset_bottom = 5.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "99999"
horizontal_alignment = 2

[node name="IronCollectable" type="AnimatedSprite2D" parent="MainWindow"]
position = Vector2(543, -84)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_gknka")
animation = &"Iron"

[node name="IronPlayerAmount" type="Label" parent="MainWindow"]
layout_mode = 0
offset_left = 335.0
offset_top = -99.0
offset_right = 406.0
offset_bottom = -64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "99999"
horizontal_alignment = 2

[node name="IronShipAmount" type="Label" parent="MainWindow"]
layout_mode = 0
offset_left = 426.0
offset_top = -99.0
offset_right = 497.0
offset_bottom = -64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "99999"
horizontal_alignment = 2

[node name="UraniumCollectable" type="AnimatedSprite2D" parent="MainWindow"]
position = Vector2(543, 55)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_7tjll")
animation = &"Uranium"
frame_progress = 0.515416

[node name="UraniumPlayerAmount" type="Label" parent="MainWindow"]
layout_mode = 0
offset_left = 334.0
offset_top = 39.0
offset_right = 405.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "99999"
horizontal_alignment = 2

[node name="UraniumShipAmount" type="Label" parent="MainWindow"]
layout_mode = 0
offset_left = 426.0
offset_top = 39.0
offset_right = 497.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "99999"
horizontal_alignment = 2

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -498.0
offset_top = -53.0
offset_right = 498.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 250
columns = 3

[node name="EndDayButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "End the day"

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="QuitGameButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit Game"

[connection signal="pressed" from="GridContainer/EndDayButton" to="." method="_on_end_day_button_pressed"]
[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
